# TicketSystem

./: .gitignore  CMakeLists.txt  README.md  run-test
my_test/: CMakeLists.txt  input_test.cpp  ticket_system_test.cpp  train_system_test.cpp
src/: main.cpp
src/b_plus_tree/: b_plus_tree.cpp  b_plus_tree_internal_page.cpp  b_plus_tree_leaf_page.cpp  b_plus_tree_page.cpp  page_guard.cpp  run.cpp
src/buffer/: buffer_pool_manager.cpp  disk_manager.cpp  lru_k_replacer.cpp
src/include/: comparator.h  config.h  rid.h
src/include/b_plus_tree/: b_plus_tree.h  b_plus_tree_header_page.h  b_plus_tree_internal_page.h  b_plus_tree_leaf_page.h  b_plus_tree_page.h  page_guard.h
src/include/buffer/: buffer_pool_manager.h  disk_manager.h  lru_k_replacer.h
src/include/memory_river/: memory_river.hpp
src/include/my_stl/: algorithm.hpp  array.hpp  exceptions.hpp  list.hpp  map.hpp  utility.hpp  vector.hpp
src/include/system/: input.h  output.hpp  system.h
src/include/system/ticket_system/: ticket.h  ticket_system.h
src/include/system/train_system/: train.h  train_system.h
src/include/system/user_system/: user.h  user_system.h
src/system/: input.cpp  system.cpp
src/system/ticket_system/: ticket_system.cpp
src/system/train_system/: train_system.cpp
src/system/user_system/: user_system.cpp
test/: ans1.txt  gen.cpp  in1.txt  in2.txt  in3.txt  in4.txt
test/ChengxiX's test/: ans1.txt  ans2.txt  ans3.txt  ans4.txt  ans5.txt  ans6.txt  in1.txt  in2.txt  in3.txt  in4.txt  in5.txt  in6.txt
